lists/failed/Travel
+ Rscript -e 'Sys.setenv(BIOCONDUCTOR_USE_CONTAINER_REPOSITORY=FALSE); p <- .libPaths(); p <- c('\''/tmp/built'\'', p); .libPaths(p); if(BiocManager::install('\''Travel'\'', INSTALL_opts = '\''--build'\'', update = TRUE, quiet = FALSE, force = TRUE, keep_outputs = TRUE) %in% rownames(installed.packages())) q(status = 0) else q(status = 1)'
'getOption("repos")' replaces Bioconductor standard repositories, see
'?repositories' for details

replacement repositories:
    CRAN: https://packagemanager.posit.co/cran/__linux__/jammy/latest

Bioconductor version 3.16 (BiocManager 1.30.19), R 4.2.2 (2022-10-31)
Installing package(s) 'Travel'
trying URL 'https://bioconductor.org/packages/3.16/bioc/src/contrib/Travel_1.6.0.tar.gz'
Content type 'application/x-gzip' length 439285 bytes (428 KB)
==================================================
downloaded 428 KB

* installing *source* package ‘Travel’ ...
** using staged installation
** libs
g++ -std=gnu++11 -I"/usr/local/lib/R/include" -DNDEBUG `pkg-config fuse --cflags` -I'/usr/local/lib/R/site-library/Rcpp/include' -I/usr/local/include   -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c Cpp_interface.cpp -o Cpp_interface.o
g++ -std=gnu++11 -I"/usr/local/lib/R/include" -DNDEBUG `pkg-config fuse --cflags` -I'/usr/local/lib/R/site-library/Rcpp/include' -I/usr/local/include   -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c RcppExports.cpp -o RcppExports.o
g++ -std=gnu++11 -I"/usr/local/lib/R/include" -DNDEBUG `pkg-config fuse --cflags` -I'/usr/local/lib/R/site-library/Rcpp/include' -I/usr/local/include   -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c altfile_operations.cpp -o altfile_operations.o
g++ -std=gnu++11 -I"/usr/local/lib/R/include" -DNDEBUG `pkg-config fuse --cflags` -I'/usr/local/lib/R/site-library/Rcpp/include' -I/usr/local/include   -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c altmmap_operations.cpp -o altmmap_operations.o
g++ -std=gnu++11 -I"/usr/local/lib/R/include" -DNDEBUG `pkg-config fuse --cflags` -I'/usr/local/lib/R/site-library/Rcpp/include' -I/usr/local/include   -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c altrep_manager.cpp -o altrep_manager.o
g++ -std=gnu++11 -I"/usr/local/lib/R/include" -DNDEBUG `pkg-config fuse --cflags` -I'/usr/local/lib/R/site-library/Rcpp/include' -I/usr/local/include   -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c class_Cache_block.cpp -o class_Cache_block.o
g++ -std=gnu++11 -I"/usr/local/lib/R/include" -DNDEBUG `pkg-config fuse --cflags` -I'/usr/local/lib/R/site-library/Rcpp/include' -I/usr/local/include   -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c class_Filesystem_cache_copier.cpp -o class_Filesystem_cache_copier.o
g++ -std=gnu++11 -I"/usr/local/lib/R/include" -DNDEBUG `pkg-config fuse --cflags` -I'/usr/local/lib/R/site-library/Rcpp/include' -I/usr/local/include   -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c class_Filesystem_file_data.cpp -o class_Filesystem_file_data.o
In file included from class_Filesystem_file_data.h:5,
                 from class_Filesystem_file_data.cpp:1:
class_Cache_block.h:10:5: error: ‘size_t’ does not name a type
   10 |     size_t size;
      |     ^~~~~~
class_Cache_block.h:1:1: note: ‘size_t’ is defined in header ‘<cstddef>’; did you forget to ‘#include <cstddef>’?
  +++ |+#include <cstddef>
    1 | #ifndef HEADER_CACHE_BLOCK
class_Cache_block.h:11:5: error: ‘size_t’ does not name a type
   11 |     size_t *counter = nullptr;
      |     ^~~~~~
class_Cache_block.h:11:5: note: ‘size_t’ is defined in header ‘<cstddef>’; did you forget to ‘#include <cstddef>’?
class_Cache_block.h:14:23: error: expected ‘)’ before ‘size’
   14 |     Cache_block(size_t size);
      |                ~      ^~~~~
      |                       )
class_Cache_block.h:21:5: error: ‘size_t’ does not name a type
   21 |     size_t use_count() const;
      |     ^~~~~~
class_Cache_block.h:21:5: note: ‘size_t’ is defined in header ‘<cstddef>’; did you forget to ‘#include <cstddef>’?
class_Cache_block.h:23:5: error: ‘size_t’ does not name a type
   23 |     size_t get_size() const;
      |     ^~~~~~
class_Cache_block.h:23:5: note: ‘size_t’ is defined in header ‘<cstddef>’; did you forget to ‘#include <cstddef>’?
class_Cache_block.h:27:5: error: ‘size_t’ does not name a type
   27 |     size_t get_serialize_size() const;
      |     ^~~~~~
class_Cache_block.h:27:5: note: ‘size_t’ is defined in header ‘<cstddef>’; did you forget to ‘#include <cstddef>’?
class_Filesystem_file_data.cpp: In member function ‘size_t Filesystem_file_data::get_serialize_size()’:
class_Filesystem_file_data.cpp:70:26: error: ‘const class Cache_block’ has no member named ‘get_serialize_size’
   70 |         size += i.second.get_serialize_size();
      |                          ^~~~~~~~~~~~~~~~~~
class_Filesystem_file_data.cpp: In member function ‘void Filesystem_file_data::serialize(void*)’:
class_Filesystem_file_data.cpp:92:39: error: ‘const class Cache_block’ has no member named ‘get_serialize_size’
   92 |         size_t buffer_size = i.second.get_serialize_size();
      |                                       ^~~~~~~~~~~~~~~~~~
class_Filesystem_file_data.cpp: In member function ‘void Filesystem_cache_index_iterator::compute_block_info()’:
class_Filesystem_file_data.cpp:177:39: error: ‘class Cache_block’ has no member named ‘get_size’
  177 |     block_length = block_iter->second.get_size() / type_size;
      |                                       ^~~~~~~~
make: *** [/usr/local/lib/R/etc/Makeconf:178: class_Filesystem_file_data.o] Error 1
ERROR: compilation failed for package ‘Travel’
* removing ‘/tmp/built/Travel’

The downloaded source packages are in
	‘/tmp/RtmpxHzYX5/downloaded_packages’
Old packages: 'fansi', 'fontawesome', 'fs', 'knitr', 'Rcpp', 'sass', 'vctrs',
  'yaml', 'class', 'MASS', 'spatial'
Warning message:
In install.packages(...) :
  installation of package ‘Travel’ had non-zero exit status

real	0m30.047s
user	0m27.071s
sys	0m1.865s
